--- a/estilo.css
+++ b/estilo.css
@@ -21,6 +21,11 @@ input {
     border-radius: 3px;
 }
 
+#visor {
+    width: 99%;
+    height: 40px;
+}
+
 input[type=button] {
     width: 100px;
     height: 50px;
@@ -54,9 +59,4 @@ div#segunda input:nth-child(4) {
 
 div#primeira input:nth-child(4) {
     background-color: #8f8f8f;
-}
-
-div#calculadora input:nth-child(1) {
-    width: 100px;
-    height: 40px;
 }
